--- a/abc_truth_up/Makefile
+++ b/abc_truth_up/Makefile
@@ -43,12 +43,7 @@ CFLAGS   += -Wall -Wno-unused-function $(OPTFLAGS) $(patsubst %, -I%, $(MODULES)
 CXXFLAGS += $(CFLAGS) 
 
 #LIBS := -m32 -ldl -rdynamic -lreadline -ltermcap
-#
-# Commented out for debug
-#LIBS := -ldl /usr/lib64/libreadline.a /usr/lib64/libncurses.a -rdynamic
-
-# For build on Archlinnux
-LIBS := -ldl /usr/lib/libreadline.a /usr/lib/libncurses.a -rdynamic
+LIBS := -ldl /usr/lib64/libreadline.a /usr/lib64/libncurses.a -rdynamic
 
 SRC  := 
 GARBAGE := core core.* *.stackdump ./tags $(PROG)
@@ -60,8 +55,7 @@ include $(patsubst %, %/module.make, $(MODULES))
 OBJ := \
 	$(patsubst %.cc, %.o, $(filter %.cc, $(SRC))) \
 	$(patsubst %.c, %.o,  $(filter %.c, $(SRC)))  \
-	$(patsubst %.y, %.o,  $(filter %.y, $(SRC)))  \
-	$(patsubst %.cpp, %.o, $(filter %.cpp, $(SRC)))  
+	$(patsubst %.y, %.o,  $(filter %.y, $(SRC))) 
 
 DEP := $(OBJ:.o=.d)
 
@@ -72,9 +66,6 @@ DEP := $(OBJ:.o=.d)
 
 %.d: %.cc
 	./depends.sh $(CXX) `dirname $*.cc` $(CXXFLAGS) $(CFLAGS) $*.cc > $@
-
-%.d: %.cpp
-	./depends.sh $(CXX) `dirname $*.cpp` $(CXXFLAGS) $(CFLAGS) $*.cpp > $@
 
 -include $(DEP)
 
